--- a/work_project/templates/base.html
+++ b/work_project/templates/base.html
@@ -14,7 +14,7 @@
 {% block content %}
 
 {% endblock %}
-<script src="{% static 'js/scripts.js' %}"></script>
+<script src="{% static '/js/scripts.js' %}"></script>
 {#<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"#}
 {#        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"#}
 {#        crossorigin="anonymous"></script>#}
@@ -22,4 +22,6 @@
 {#        integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i"#}
 {#        crossorigin="anonymous"></script>#}
 </body>
+
+{% block js_scripts %} {% endblock %}
 </html>
