--- a/work_project/templates/navbar.html
+++ b/work_project/templates/navbar.html
@@ -15,14 +15,14 @@
 <div class="d-flex" id="wrapper">
     <!-- Sidebar-->
     <div class="border-end bg-white" id="sidebar-wrapper">
-        <div class="sidebar-heading border-bottom bg-light">Start Bootstrap</div>
+        <div class="sidebar-heading border-bottom bg-light"><h2>FC SDA</h2></div>
         <div class="list-group list-group-flush">
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Dashboard</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Shortcuts</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Overview</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Events</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Profile</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Status</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Footbal</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Club</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Membri</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Fani</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Stadion</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Tichete</a>
         </div>
     </div>
     <!-- Page content wrapper-->
@@ -55,16 +55,33 @@
         </nav>
         <!-- Page content-->
         <div class="container-fluid">
-            <h1 class="mt-4">Simple Sidebar</h1>
-            <p>The starting state of the menu will appear collapsed on smaller screens, and will appear non-collapsed on
-                larger screens. When toggled using the button below, the menu will change.</p>
-            <p>
-                Make sure to keep all page content within the
-                <code>#page-content-wrapper</code>
-                . The top navbar is optional, and just for demonstration. Just create an element with the
-                <code>#sidebarToggle</code>
-                ID which will toggle the menu when clicked.
-            </p>
+            <h3 class="mt-4">SDA FOREVER</h3>
+            <br><br>
+            <p>Bun venit în lumea echipei noastre de fotbal, creată și condusă cu pasiune de Ionicescu Alexandru și Horoiu Cezar!! Suntem mândri să vă prezentăm echipa noastră,
+                formată exclusiv din cursanții talentați ai școlii noastre de IT SDA. Împărtășim nu doar dragostea
+                pentru tehnologie și dezvoltare, ci și pasiunea pentru fotbal.
+                Echipa noastră este un exemplu al forței și abilităților noastre combinate în lumea digitală și a
+                sportului. Suntem o comunitate strâns legată, care se bucură de fiecare moment petrecut pe teren,
+                demonstrând că pasiunea pentru tehnologie și sport se pot completa perfect.
+                Indiferent de nivelul de experiență în fotbal, echipa noastră oferă un mediu prietenos și encantator în
+                care să învățăm și să creștem împreună. Jucătorii noștri au o varietate de abilități și talente, și,
+                prin intermediul fotbalului, ne străduim să ne dezvoltăm atât individual, cât și ca echipă.
+                Antrenamentele noastre sunt un amestec captivant de tehnologie și sport. Îmbinăm noțiuni tehnice și
+                tactice cu exerciții fizice și jocuri practice pentru a ne îmbunătăți abilitățile fotbalistice. În
+                același timp, putem învăța și despre cooperare, comunicare și spirit de echipă - elemente esențiale în
+                atât în dezvoltarea software, cât și în jocul de fotbal.
+                Meciurile noastre sunt momentele în care putem demonstra ceea ce am învățat și cât de mult ne-am
+                dezvoltat ca echipă. Indiferent de rezultat, ne bucurăm de fiecare moment petrecut pe teren, învățând
+                din fiecare meci și căutând mereu să ne îmbunătățim performanțele.
+                Pe lângă excelența noastră în fotbal, suntem și o comunitate unită în afara terenului. Participăm la
+                evenimente sociale și organizăm activități de team-building pentru a ne cunoaște mai bine și a dezvolta
+                legături puternice de prietenie. Suntem un sprijin pentru colegii noștri nu doar în dezvoltarea
+                software, ci și în viața de zi cu zi.
+                Suntem mândri de realizările noastre și suntem plini de entuziasm pentru viitor. Împreună, ca echipă de
+                fotbal formată exclusiv din cursanți ai școlii de IT SDA, suntem dornici să ne dezvoltăm abilitățile și
+                să obținem rezultate remarcabile pe teren. Suntem dovada că pasiunile noastre pentru tehnologie și sport
+                se pot îmbina într-un mod unic și extraordinar.</p>
+
         </div>
     </div>
 </div>
