ticket_site restored2

--- a/work_project/templates/navbar.html
+++ b/work_project/templates/navbar.html
@@ -14,7 +14,6 @@
 <body>
 <div class="d-flex" id="wrapper">
     <!-- Sidebar-->
-    <form method="POST"></form>
     <div class="border-end bg-white" id="sidebar-wrapper">
         <div class="sidebar-heading border-bottom bg-light"><h2>FC SDA</h2></div>
         <div class="list-group list-group-flush">
@@ -25,8 +24,6 @@
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Stadion</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Tichete</a>
         </div>
-
-
     </div>
     <!-- Page content wrapper-->
     <div id="page-content-wrapper">
@@ -41,9 +38,6 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
                         <li class="nav-item active"><a class="nav-link" href="#!">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="informatii/">Informatii</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Link</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Link</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Link</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
@@ -61,10 +55,9 @@
         </nav>
         <!-- Page content-->
         <div class="container-fluid">
-            <h3 class="col-md-6-4">SDA FOREVER</h3>
+            <h3 class="mt-4">SDA FOREVER</h3>
             <br><br>
-            <p>Bun venit în lumea echipei noastre de fotbal, creată și condusă cu pasiune de Ionicescu Alexandru și
-                Horoiu Cezar!! Suntem mândri să vă prezentăm echipa noastră,
+            <p>Bun venit în lumea echipei noastre de fotbal, creată și condusă cu pasiune de Ionicescu Alexandru și Horoiu Cezar!! Suntem mândri să vă prezentăm echipa noastră,
                 formată exclusiv din cursanții talentați ai școlii noastre de IT SDA. Împărtășim nu doar dragostea
                 pentru tehnologie și dezvoltare, ci și pasiunea pentru fotbal.
                 Echipa noastră este un exemplu al forței și abilităților noastre combinate în lumea digitală și a
@@ -88,10 +81,10 @@
                 fotbal formată exclusiv din cursanți ai școlii de IT SDA, suntem dornici să ne dezvoltăm abilitățile și
                 să obținem rezultate remarcabile pe teren. Suntem dovada că pasiunile noastre pentru tehnologie și sport
                 se pot îmbina într-un mod unic și extraordinar.</p>
-            <br><br>
+
         </div>
     </div>
 </div>
-{#<body id="bg" style="background-image: url('{% static "images/real.jpg" %}');">#}
+
 </body>
 </html>
