--- a/work_project/templates/navbar.html
+++ b/work_project/templates/navbar.html
@@ -42,7 +42,7 @@
                     <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
                         <li class="nav-item active"><a class="nav-link" href="#!">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="informatii/">Informatii</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Link</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'order_list' %}"> Order</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Link</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Link</a></li>
                         <li class="nav-item dropdown">
