register_ticket.html

--- a/work_project/templates/navbar.html
+++ b/work_project/templates/navbar.html
@@ -23,7 +23,7 @@
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Membri</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Fani</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Stadion</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Tichete</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{% url 'register-ticket' %}">Tichete</a>
         </div>
 
 
