--- a/work_project/templates/order_list.html
+++ b/work_project/templates/order_list.html
@@ -1,4 +1,15 @@
-{% for order in orders %}
+{% load static %}
+
+<html>
+<head>
+    <title>Lista comenzilor</title>
+</head>
+<body>
+<h1>Lista comenzilor</h1>
+<ul>
+    {% for order in orders %}
+        <li>{{ order }}</li>  <!-- Afișați informațiile relevante despre comandă -->
+        {% for order in orders %}
   <div>
     <p>Order ID: {{ order.id }}</p>
     <p>User: {{ order.user.username }}</p>
@@ -7,3 +18,7 @@
     <hr>
   </div>
 {% endfor %}
+    {% endfor %}
+</ul>
+</body>
+</html>
