--- a/work_project/templates/ticket_site/register_ticket.html
+++ b/work_project/templates/ticket_site/register_ticket.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% load static %}
 
 {% block title %}Create a new ticket{% endblock %}
 
@@ -18,7 +18,8 @@
                         <h3 class="text-center">Create a new ticket</h3>
                     </div>
 
-                    <form method="post">
+{#                    <form method="post">#}
+                    <form action="{% url 'register-ticket' %}" method="post">
                         {# csrf -> Cross site request fogery protection #}
                         {% csrf_token %} {# utilizata pentru a preveni atacurile rau intentionate #}
                         <div class="card-body">
