--- a/work_project/templates/base.html
+++ b/work_project/templates/base.html
@@ -5,23 +5,32 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}  {% endblock %}</title>
-{#    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"#}
-{#          integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">#}
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{% static '/css/style.css' %}">
 </head>
 <body>
 {% include 'navbar.html' %}
-{% block content %}
+<div class="d-flex" >
+    <!-- Page content wrapper-->
+    <div id="page-content-wrapper">
+{#        {% include 'left_menu.html' %}#}
+        {% block content %}
 
-{% endblock %}
+        {% endblock %}
+    </div>
+</div>
 <script src="{% static '/js/scripts.js' %}"></script>
-{#<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"#}
-{#        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"#}
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+        crossorigin="anonymous"></script>
 {#        crossorigin="anonymous"></script>#}
 {#<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js"#}
 {#        integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i"#}
 {#        crossorigin="anonymous"></script>#}
 </body>
 
-{% block js_scripts %} {% endblock %}
+{% block js_scripts %}
+
+{% endblock %}
 </html>
