--- a/work_project/templates/home/index.html
+++ b/work_project/templates/home/index.html
@@ -1,8 +1,12 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+<h1>Welcome to homepage!</h1>
+<div>
+    {% include 'informatii.html' %}
+</div>
 {% endblock %}
 
 {% block js_scripts %}
-    <script src="{% static '/js/home.js' %}"></script>
+    <script src="{% static 'js/home.js' %}"></script>
 {% endblock %}
