--- a/work_project/templates/user/user.html
+++ b/work_project/templates/user/user.html
@@ -1,10 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block title %} Create a new user {% endblock %}
+
+{% block content %}
+    <style>
+        .errorlist {
+            color: red;
+            list-style-type: none;
+        }
+    </style>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-6 offset-md-3">
+                <br><br>
+                <div class="card">
+                    <div class="card-header">
+                        <h3 class="text-center">Create a new user</h3>
+                    </div>
+
+                    <form  action="{% url 'create-user' %}" method="GET">
+                        {% csrf_token %}
+                        <div class="card-body">
+                            {{ form.as_p }}
+                        </div>
+
+                        <input type="text" name="first_name">
+                        <input type="text" name="last_name">
+
+                        <button type="submit">Submit</button>
+                    </form>
+
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+
+
+
+
+
+
+{% endblock %}
