--- a/work_project/templates/user/list_of_user.html
+++ b/work_project/templates/user/list_of_user.html
@@ -6,13 +6,19 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container-fluid">
+        <div class ="row">
+            <div class="col-md-6 ">
+            </div>
         <h1>Formular utilizator</h1>
         <form method="POST">
             {% csrf_token %}
-            {{ form.as_p }}
-            <button class="btn btn-primary" type="submit">Trimite</button>
+
+            <div class="card-footer text-center">
+            <button type="submit" class="btn btn-success">Add User</button>
+            </div>
         </form>
+        </div>
     </div>
 </body>
 </html>
