--- a/work_project/templates/home/index.html
+++ b/work_project/templates/home/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h1>Welcome to homepage!</h1>
 <div>
-    {% include 'informatii.html' %}
+    <img src="{% static 'images/real.jpg' %}" alt="Imaginea Real">
 </div>
 {% endblock %}
 
