--- a/work_project/templates/base.html
+++ b/work_project/templates/base.html
@@ -23,10 +23,10 @@
            FC SDA
         </div>
         <div class="list-group list-group-flush">
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Fotbal</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{% url 'informatii' %}">Informații</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Club</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Fani</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Events</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{% url 'event_list' %}">Events</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Profile</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{% url 'register-ticket' %}">Ticketing</a>
 
