--- a/work_project/templates/event/evenimente.html
+++ b/work_project/templates/event/evenimente.html
@@ -15,33 +15,33 @@
             <div class="card-header">
                 <h2>Adaugă un nou eveniment:</h2>
             </div>
-{#            <div class="card-body">#}
-{#                <form method="post" action="{% url 'adauga_eveniment' %}">#}
-{#                    {% csrf_token %}#}
-{#                    <div class="form-group">#}
-{#                        <label for="title">Titlu:</label>#}
-{#                        <input type="text" id="title" name="title" class="form-control" required>#}
-{#                    </div>#}
-{#                    <div class="form-group">#}
-{#                        <label for="description">Descriere:</label>#}
-{#                        <textarea id="description" name="description" class="form-control" required></textarea>#}
-{#                    </div>#}
-{#                    <div class="form-group">#}
-{#                        <label for="status">Status:</label>#}
-{#                        <select id="status" name="status" class="form-control" required>#}
-{#                            <option value="1">To Do</option>#}
-{#                            <option value="2">In Progress</option>#}
-{#                            <option value="3">In Review</option>#}
-{#                            <option value="4">Done</option>#}
-{#                        </select>#}
-{#                    </div>#}
-{#                    <div class="form-group">#}
-{#                        <label for="date">Data evenimentului:</label>#}
-{#                        <input type="text" id="date" name="date" class="form-control" required>#}
-{#                    </div>#}
-{#                    <button type="submit" class="btn btn-primary">Adaugă</button>#}
-{#                </form>#}
-{#            </div>#}
+            <div class="card-body">
+                <form method="post" action="{% url 'adauga_eveniment' %}">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <label for="title">Titlu:</label>
+                        <input type="text" id="title" name="title" class="form-control" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="description">Descriere:</label>
+                        <textarea id="description" name="description" class="form-control" required></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="status">Status:</label>
+                        <select id="status" name="status" class="form-control" required>
+                            <option value="1">To Do</option>
+                            <option value="2">In Progress</option>
+                            <option value="3">In Review</option>
+                            <option value="4">Done</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="date">Data evenimentului:</label>
+                        <input type="text" id="date" name="date" class="form-control" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Adaugă</button>
+                </form>
+            </div>
         </div>
     </div>
 
