--- a/work_project/templates/base.html
+++ b/work_project/templates/base.html
@@ -20,7 +20,7 @@
             <a href="{% url 'home' %}">
                 <img src="{% static 'images/favicon.ico' %}" alt="informatii" style="width:30px;heigth:30px;">
             </a>
-           FC SDA
+            FC SDA
         </div>
         <div class="list-group list-group-flush">
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{% url 'informatii' %}">Informații</a>
@@ -28,7 +28,8 @@
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Fani</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{% url 'event_list' %}">Events</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Profile</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{% url 'register-ticket' %}">Ticketing</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3"
+               href="{% url 'register-ticket' %}">Ticketing</a>
 
         </div>
     </div>
@@ -47,7 +48,26 @@
                         <li class="nav-item active"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
                         <li class="nav-item active"><a class="nav-link " href="#!">Shop</a></li>
                         <li class="nav-item active"><a class="nav-link " href="{% url 'login' %}">Login</a></li>
-                        <li class="nav-item active"><a class="nav-link active" href="{% url 'create-user' %}">User</a></li>
+                        <li class="nav-item active"><a class="nav-link " href="{% url 'logout' %}">Logout</a></li>
+                        {#        <li class="nav-item active"><a class="nav-link active" href="{% url 'create-user' %}">User</a>#}
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                               aria-expanded="false">
+                                User
+                            </a>
+                            <ul class="dropdown-menu">
+
+                                <li><a class="dropdown-item" href="{% url 'create-user' %}">Create a new
+                                        user</a></li>
+
+
+                                <li><a class=" dropdown-item" href="{% url 'list-of-user' %}">List of user </a></li>
+
+
+                            </ul>
+                        </li>
+
+
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
                                data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
