--- a/work_project/templates/user/list_of_user.html
+++ b/work_project/templates/user/list_of_user.html
@@ -1,24 +1,113 @@
-{% load static %}
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Formular utilizator</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-</head>
-<body>
-    <div class="container-fluid">
-        <div class ="row">
-            <div class="col-md-6 ">
-            </div>
-        <h1>Formular utilizator</h1>
-        <form method="POST">
-            {% csrf_token %}
+{% extends 'base.html' %}
+{% block title %} List of user {% endblock %}
 
-            <div class="card-footer text-center">
-            <button type="submit" class="btn btn-success">Add User</button>
+{% block content %}
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-3">
+            <div class="card">
+                <div class="card-header">
+                    <h3 class="text-center">
+                        Filters
+                    </h3>
+                </div>
+                <form method="get">
+                    <div class="card-body">
+                        {{ form_filters.as_p }}
+                    </div>
+                    <div class="card-footer text-center">
+                        <button type="submit" class="btn btn-outline-success">Filters</button>
+                        <a href="{% url 'list-of-user' %}" class="btn btn-outline-danger">Reset</a>
+                    </div>
+                </form>
             </div>
-        </form>
+
+        </div>
+        <div class="col-md-9">
+            {#                {{ current_datetime }}#}
+            {#                {% for trainer in get_all_trainers %}#}
+            {#                    <p>{{ trainer.first_name }} {{ trainer.last_name }} {{ trainer.course }}</p>#}
+            {##}
+            {#                {% endfor %}#}
+            <table class="table">
+                <thead>
+                <tr>
+                    <th> First Name</th>
+                    <th> Last Name</th>
+                    <th> Email</th>
+                    <th> Age</th>
+                    <th> Status</th>
+                    <th> Start date</th>
+                    <th> End date</th>
+
+                </tr>
+                </thead>
+                <tbody>
+{#                                {% for user in all_users %}#}
+                <tr>
+                    <td>{{ user.first_name }}</td>
+                    <td>{{ user.last_name }}</td>
+                    <td>{{ user.email }}</td>
+                    <td>{% if user.active %} Active {% else %} Inactive {% endif %}</td>
+                    <td>{{ user.start_date|date:"d/m/Y" }}</td>
+{#                                    {% endif %}</td>#}
+                    <td>
+                        <div class="dropdown">
+                            <button class="btn btn-secondary dropdown-toggle" type="button"
+                                    data-bs-toggle="dropdown" aria-expanded="false">
+                                more actions
+                            </button>
+                            <ul class="dropdown-menu">
+{#                                <li><a class="dropdown-item"#}
+{#                                       href="{% url 'update-student' student.id %}">Update</a></li>#}
+                                <li><a class="dropdown-item"
+                                       href="{% url 'delete-user' user.id %}">Delete</a></li>
+{#                                <li><a class="dropdown-item"#}
+{#                                       href="{% url 'details-student' student.id %}">View</a></li>#}
+{#                                {% if perms.student.inactive_student %}#}
+{#                                    <li>#}
+{#                                        <!-- Button trigger modal -->#}
+{#                                        <button type="button" class="dropdown-item" data-bs-toggle="modal"#}
+{#                                                data-bs-target="#student_{{ student.id }}">#}
+{#                                            Inactivate#}
+{#                                        </button>#}
+{#                                    </li>#}
+{#                                {% endif %} #de revenit trebuiesc create permisiunile#}
+                            </ul>
+                        </div>
+                    </td>
+                </tr>
+                <!-- Modal -->
+{#                {% if perms.student.inactive_student %}#}
+{#                    <div class="modal fade" id="student_{{ student.id }}" tabindex="-1"#}
+{#                         aria-labelledby="exampleModalLabel"#}
+{#                         aria-hidden="true">#}
+{#                        <div class="modal-dialog">#}
+{#                            <div class="modal-content">#}
+{#                                <div class="modal-header">#}
+{#                                    <h1 class="modal-title fs-5" id="exampleModalLabel">{{ student }}</h1>#}
+{#                                    <button type="button" class="btn-close" data-bs-dismiss="modal"#}
+{#                                            aria-label="Close"></button>#}
+{#                                </div>#}
+{#                                <div class="modal-body">#}
+{#                                    Are you sure you want to deactivate {{ student }}?#}
+{#                                </div>#}
+{#                                <div class="modal-footer">#}
+{#                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No#}
+{#                                    </button>#}
+{#                                    <a href="{% url 'deactivate-student' student.id %}"#}
+{#                                       class="btn btn-danger">Yes</a>#}
+{#                                </div>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                {% endif %}#}
+{#                {% endfor %}#}
+                </tbody>
+            </table>
         </div>
     </div>
-</body>
-</html>
+</div>
+
+{% endblock %}
