fixup! update/search/details/delete

--- a/work_project/templates/base.html
+++ b/work_project/templates/base.html
@@ -28,8 +28,7 @@
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Fani</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{% url 'event_list' %}">Events</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Profile</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3"
-               href="{% url 'register-ticket' %}">Ticketing</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{% url 'register-ticket' %}">Ticketing</a>
 
         </div>
     </div>
