--- a/work_project/templates/registration/update_user.html
+++ b/work_project/templates/registration/update_user.html
@@ -16,7 +16,7 @@
                         </div>
                         <div class="card-footer text-center">
                             <button type="submit" class="btn btn-success">Save</button>
-                            <a href="{% url 'list-of-students' %}" class="btn btn-secondary">Cancel</a>
+                            <a href="{% url 'list-of-user' %}" class="btn btn-secondary">Cancel</a>
                         </div>
                     </form>
                 </div>
