--- a/work_project/templates/base.html
+++ b/work_project/templates/base.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <meta name="description" content=""/>
@@ -22,14 +23,13 @@
             </a>
             FC SDA
         </div>
-        <div class="list-group list-group-flush">
+        <div class="list-group list-group-flush  ">
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{% url 'informatii' %}">Informații</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Club</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Fani</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{% url 'event_list' %}">Events</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Profile</a>
+{#            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!"></a>#}
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{% url 'register-ticket' %}">Ticketing</a>
-
         </div>
     </div>
     <!-- Page content wrapper-->
@@ -37,18 +37,18 @@
         <!-- Top navigation-->
         <nav class="navbar navbar-expand-lg navbar-light  border-bottom">
             <div class="container-fluid">
-                <button class="btn btn-primary" id="sidebarToggle">Toggle Menu</button>
+                <button class="btn btn-success" id="sidebarToggle">Toggle Menu</button>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
-                        <li class="nav-item active"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
+                        <li class="nav-item active"><a class="nav-link "  href="{% url 'home' %}">Home</a></li>
                         <li class="nav-item active"><a class="nav-link " href="#!">Shop</a></li>
                         <li class="nav-item active"><a class="nav-link " href="{% url 'login' %}">Login</a></li>
                         <li class="nav-item active"><a class="nav-link " href="{% url 'logout' %}">Logout</a></li>
-                        {#  <li class="nav-item active"><a class="nav-link active" href="{% url 'create-user' %}">User</a>#}
+{#                          <li class="nav-item active"><a class="nav-link active" href="{% url 'create-user' %}">User</a>#}
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                aria-expanded="false">
@@ -72,18 +72,18 @@
                                    aria-label="Search">
                             <button class="btn btn-outline-success" type="submit">Search</button>
                         </form>
+                        
 
-
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
-                               data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#!">Action</a>
-                                <a class="dropdown-item" href="#!">Another action</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#!">Something else here</a>
-                            </div>
-                        </li>
+{#                        <li class="nav-item dropdown">#}
+{#                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"#}
+{#                               data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>#}
+{#                            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">#}
+{#                                <a class="dropdown-item" href="#!">Action</a>#}
+{#                                <a class="dropdown-item" href="#!">Another action</a>#}
+{#                                <div class="dropdown-divider"></div>#}
+{#                                <a class="dropdown-item" href="#!">Something else here</a>#}
+{#                            </div>#}
+{#                        </li>#}
                     </ul>
                 </div>
             </div>
@@ -97,6 +97,7 @@
         </div>
     </div>
 </div>
+
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Core theme JS-->
