--- a/work_project/templates/registration/search.html
+++ b/work_project/templates/registration/search.html
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col-md-12">
                 <h3 class="text"> Results: </h3>
-                <table class="table table-primary">
+                <table class="table table-active">
                     <thead>
                         <tr>
                             <th>First name</th>
