--- a/work_project/templates/user/list_of_user.html
+++ b/work_project/templates/user/list_of_user.html
@@ -13,23 +13,15 @@
                     </h3>
                 </div>
                 <form method="get">
-                    <div class="card-body">
-                        {{ form_filters.as_p }}
-                    </div>
+                    <div class="card-body"></div>
                     <div class="card-footer text-center">
                         <button type="submit" class="btn btn-outline-success">Filters</button>
                         <a href="{% url 'list-of-user' %}" class="btn btn-outline-danger">Reset</a>
                     </div>
                 </form>
             </div>
-
         </div>
         <div class="col-md-9">
-            {#                {{ current_datetime }}#}
-            {#                {% for trainer in get_all_trainers %}#}
-            {#                    <p>{{ trainer.first_name }} {{ trainer.last_name }} {{ trainer.course }}</p>#}
-            {##}
-            {#                {% endfor %}#}
             <table class="table">
                 <thead>
                 <tr>
@@ -40,18 +32,17 @@
                     <th> Status</th>
                     <th> Start date</th>
                     <th> End date</th>
-
                 </tr>
                 </thead>
                 <tbody>
-{#                                {% for user in all_users %}#}
+{#                {% for user in all_users %}#}
                 <tr>
                     <td>{{ user.first_name }}</td>
                     <td>{{ user.last_name }}</td>
                     <td>{{ user.email }}</td>
                     <td>{% if user.active %} Active {% else %} Inactive {% endif %}</td>
                     <td>{{ user.start_date|date:"d/m/Y" }}</td>
-{#                                    {% endif %}</td>#}
+                </tr>
                     <td>
                         <div class="dropdown">
                             <button class="btn btn-secondary dropdown-toggle" type="button"
@@ -70,7 +61,7 @@
 {#                                    <li>#}
 {#                                        <!-- Button trigger modal -->#}
 {#                                        <button type="button" class="dropdown-item" data-bs-toggle="modal"#}
-{#                                                data-bs-target="#student_{{ student.id }}">#}
+{#                                                data-bs-target="#user_{{ user.id }}">#}
 {#                                            Inactivate#}
 {#                                        </button>#}
 {#                                    </li>#}
